--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
                 <h2>Item 1</h2>
                 <div class="input-group">
                     <label for="price1">Price:</label>
-                    <input type="number" id="price1" placeholder="Enter price" step="0.01" min="0">
+                    <input type="number" id="price1" placeholder="0.00" step="0.01" min="0.01" required>
                 </div>
                 <div class="input-group">
                     <label for="quantity1">Quantity:</label>
-                    <input type="number" id="quantity1" placeholder="Enter quantity" min="1" value="1">
+                    <input type="number" id="quantity1" placeholder="1" min="1" value="1" required>
                 </div>
                 
                 <h2>Item 2</h2>
                 <div class="input-group">
                     <label for="price2">Price:</label>
-                    <input type="number" id="price2" placeholder="Enter price" step="0.01" min="0">
+                    <input type="number" id="price2" placeholder="0.00" step="0.01" min="0.01" required>
                 </div>
                 <div class="input-group">
                     <label for="quantity2">Quantity:</label>
-                    <input type="number" id="quantity2" placeholder="Enter quantity" min="1" value="1">
+                    <input type="number" id="quantity2" placeholder="1" min="1" value="1" required>
                 </div>
                 
                 <button id="calculate-btn" class="btn">Calculate Average Price</button>
